--- a/style.css
+++ b/style.css
@@ -1,41 +1,34 @@
 body {
-  background-color: rgb(170, 255, 109);
-    margin: 0 auto;
-   
+  font-family: Arial, sans-serif;
 }
-  #inputtt{
-    width: 192px;
-    top: 25px;
-    left: 100px;
-    position: absolute;
-    
-  }
 
-  #btn{
-    width: 200px;
-    height: 200px;
-    top:50px ;
-    left: 100px;
-    position: absolute;
-  }
-  #result{
-    margin-bottom: 5px;
-    left: 320px;
-    position: absolute;
-    color: rgb(255, 0, 0);
-  }
+.container {
+  max-width: 400px;
+  margin: 0 auto;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
 
-  ul{
-    list-style: georgian;
-    margin: 0;
-    padding: 0;
-  }
-  .container {
-    height: 300px;
-    width: 200px;
-    top : 50px;
-    color: black;
-    position: absolute;
-  }
+h1 {
+  text-align: center;
+}
 
-  
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+li {
+  margin-bottom: 10px;
+  display: flex;
+  align-items: center;
+}
+
+li input[type="checkbox"] {
+  margin-right: 10px;
+}
+
+li.completed {
+  text-decoration: line-through;
+}
